feat: add /stats to api
